                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 06-09-2004 changed: Behaviour of triggers in Fullscreen video
  - 06-09-2004 changed: Behaviour of triggers in lists/thumbs (now analog - see keymap.xml)
  - 06-09-2004 fixed: FFWD/REWD when using passthrough caused audio to not be muted
  - 06-09-2004 changed: Volume level of centre channel in output to all speakers
  - 06-09-2004 fixed: SF bug 1018396: Mouse over on home buttons doesn't change background
  - 06-09-2004 added: <align> and <aligny> tags to radiobuttons and selectbuttons
  - 06-09-2004 changed: iTunes DAAP performance tweaks
  - 06-09-2004 changed: reset instead of powercycle after saving network settings
  - 06-09-2004 fixed: Issue with vertical alignment of text on controls (with references.xml)
  - 06-09-2004 fixed: Blackscreen on load if old skin was MediaCenter, and new version does not have the MediaCenter skin present
  - 05-09-2004 added: support for true type fonts in skins
  - 05-09-2004 added: <execute> tags to button controls for executing xbes/movies/scripts/audio
  - 05-09-2004 added: <aligny> tag to button controls for vertical alignment
  - 05-09-2004 fixed: Volume bar caused flashes when it disappeared + hid the OSD etc.
  - 04-09-2004 added: Add more network settings in GUI: FTP server, Web server, time synchronization
  - 03-09-2004 fixed: SMB did not handle files with non ASCII names properly (got NT_OBJECT_NOT_FOUND)
  - 03-09-2004 fixed: eliminate crash that occurs when loading wma files which have non ASCII characters in its tags
  - 02-09-2004 fixed: eliminate crash that occurs when loading m3u which have weird characters
  - 02-09-2004 added: grouping of controls